cmake_minimum_required(VERSION 3.10)
project(PongGame)

set(CMAKE_CXX_STANDARD 11)

find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})

add_executable(PongGame
    main.cpp
    Game.cpp
    Game.h
    Paddle.cpp
    Paddle.h
    Ball.cpp
    Ball.h
)

target_link_libraries(PongGame ${SDL2_LIBRARIES})